--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -7,7 +7,7 @@
     HOME
     ********************************-->
 
-    <div class="home">
+    <div id="home">
 
         <!--****************************
         GREETING
@@ -80,17 +80,13 @@
     </div>
 
     <!--****************************
-    MODAL
+    ABOUT
     ********************************-->
+    <div id="about">
 
-    <div class="modal">
+        <div class="title"><h2>{{data.about.title}}</h2></div>
 
-        <!--****************************
-        ABOUT
-        ********************************-->
-        <div id="about">
-
-            <div class="title"><h2>{{data.about.title}}</h2></div>
+        <div class="modal-body">
 
             <div class="block1">
                 <!-- About - Carousel -->
@@ -136,136 +132,136 @@
                 </div>
             </div>
         </div>
-
-        <!--**************************** 
-            PROJECTS 
-        ********************************-->
-        <div id="projects">
-            <div class="title">
-                <h2>{{data.projects.title}}</h2>
-            </div>
-
-            <div class="projectsComponent">
-
-                <div id="projectsList">
-                    <ul>
-                        {% for project in data.projects.list %}
-                            <button onclick="projectsClick({{project}})"> 
-                                <li>{{project.name}}</li>
-                            </button>
-                        {% endfor %}
-                    </ul>
-                </div>
-
-                <div id="projectsPreview"></div>
-
-                <div id="projectView">
-                    <p>Seleccione un proyecto</p>
-                </div>
-            </div>
-            <div></div>
-            
-        </div>
-
-        <!--****************************
-                SERVICES 
-        ********************************-->
-        <div id="services">
-
-            <!-- Title -->
-
-            <div class="title"><h2>{{data.services.title}}</h2></div>
-
-
-            <!-- Cards -->
-
-            <div class="cards">
-
-                {%for serviceID in images.services%}
-
-                    <div class="grid">
-                    
-                        <div id="{{serviceID}}" 
-                             onclick="serviceClick('{{serviceID}}')" 
-                             class="card">
-                        
-                            <img src="{{images.services[serviceID]['1.jpg']}}">
-                            <h3>{{data.services[serviceID].name}}</h3>
-                            <p>{{data.services[serviceID].description}}</p>
-
-                        </div>
-                    </div>
-
-                {%endfor%}
-
-            </div>
-
-        </div>
-        
-        <!--**************************** 
-            CONTACT 
-        ********************************-->
-        <div id="contact" class="contact">
-        
-            <div class="title"><h2>{{data.contact.title}}</h2></div>
-            <div class="block1">
-                <div class="map">
-                    <div class="text">
-                        <p><strong>Arquitecto: </strong>{{data.contact.name}}</p>
-                        <p><strong>Teléfono: </strong>{{data.contact.phone}}</p>
-                    </div>
-                    <!-- Embeded Maps / 1:1 aspect ratio  -->
-                    <div class="block">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d255346.77066477528!2d-78.447919!3d-0.202946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d590eb5647cd6d%3A0xb8e005887399b0b9!2sQuito%20170157!5e0!3m2!1sen!2sec!4v1677353677440!5m2!1sen!2sec" 
-                            class="responsive-iframe"
-                            width="400" 
-                            height="300" 
-                            style="border:0;" 
-                            allowfullscreen="" 
-                            loading="lazy" 
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="block2">
-                <div class="form">
-            
-                    <!-- Form -->
-                    <form method="POST">
-
-                        <!-- Form title -->
-                        <h3>{{data.contact.form.title}}</h3>
-
-                    <!--  Name -->
-                        <div class="mb-3">
-                            <label for="name" class="form-label">{{data.contact.form.name}}</label>
-                            <input type="text" class="form-control" id="name" name="name">
-                        </div>
-
-                        <!-- Email -->
-                        <div class="mb-3">
-                            <label for="e-mail" class="form-label">{{data.contact.form.email}}</label>
-                            <input type="email" class="form-control" id="e-mail" name="email">
-                        </div>
-                        
-                        <!-- Description -->
-
-                        <div class="mb-3">
-                            <label for="description" class="form-label">{{data.contact.form.description}}</label>
-                            <textarea type="text" class="form-control" id="description" rows="10" name="description"></textarea>
-                        </div>
-
-                        <!-- Submit -->
-                        
-                        <button type="submit" class="btn btn-success">{{data.contact.form.send}}</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <button id="closeModal" class="btn-close"></button>
     </div>
+
+    <!--**************************** 
+        PROJECTS 
+    ********************************-->
+    <div id="projects">
+        <div class="title">
+            <h2>{{data.projects.title}}</h2>
+        </div>
+
+        <div class="projectsComponent">
+
+            <div id="projectsList">
+                <ul>
+                    {% for project in data.projects.list %}
+                        <button onclick="projectsClick({{project}})"> 
+                            <li>{{project.name}}</li>
+                        </button>
+                    {% endfor %}
+                </ul>
+            </div>
+
+            <div id="projectsPreview"></div>
+
+            <div id="projectView">
+                <p>Seleccione un proyecto</p>
+            </div>
+        </div>
+        <div></div>
+        
+    </div>
+
+    <!--****************************
+            SERVICES 
+    ********************************-->
+    <div id="services">
+
+        <!-- Title -->
+
+        <div class="title"><h2>{{data.services.title}}</h2></div>
+
+
+        <!-- Cards -->
+
+        <div class="cards">
+
+            {%for serviceID in images.services%}
+
+                <div class="grid">
+                
+                    <div id="{{serviceID}}" 
+                            onclick="serviceClick('{{serviceID}}')" 
+                            class="card">
+                    
+                        <img src="{{images.services[serviceID]['1.jpg']}}">
+                        <h3>{{data.services[serviceID].name}}</h3>
+                        <p>{{data.services[serviceID].description}}</p>
+
+                    </div>
+                </div>
+
+            {%endfor%}
+
+        </div>
+
+    </div>
+    
+    <!--**************************** 
+        CONTACT 
+    ********************************-->
+    <div id="contact" class="contact">
+    
+        <div class="title"><h2>{{data.contact.title}}</h2></div>
+        <div class="block1">
+            <div class="map">
+                <div class="text">
+                    <p><strong>Arquitecto: </strong>{{data.contact.name}}</p>
+                    <p><strong>Teléfono: </strong>{{data.contact.phone}}</p>
+                </div>
+                <!-- Embeded Maps / 1:1 aspect ratio  -->
+                <div class="block">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d255346.77066477528!2d-78.447919!3d-0.202946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d590eb5647cd6d%3A0xb8e005887399b0b9!2sQuito%20170157!5e0!3m2!1sen!2sec!4v1677353677440!5m2!1sen!2sec" 
+                        class="responsive-iframe"
+                        width="400" 
+                        height="300" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </div>
+        </div>
+        <div class="block2">
+            <div class="form">
+        
+                <!-- Form -->
+                <form method="POST">
+
+                    <!-- Form title -->
+                    <h3>{{data.contact.form.title}}</h3>
+
+                <!--  Name -->
+                    <div class="mb-3">
+                        <label for="name" class="form-label">{{data.contact.form.name}}</label>
+                        <input type="text" class="form-control" id="name" name="name">
+                    </div>
+
+                    <!-- Email -->
+                    <div class="mb-3">
+                        <label for="e-mail" class="form-label">{{data.contact.form.email}}</label>
+                        <input type="email" class="form-control" id="e-mail" name="email">
+                    </div>
+                    
+                    <!-- Description -->
+
+                    <div class="mb-3">
+                        <label for="description" class="form-label">{{data.contact.form.description}}</label>
+                        <textarea type="text" class="form-control" id="description" rows="10" name="description"></textarea>
+                    </div>
+
+                    <!-- Submit -->
+                    
+                    <button type="submit" class="btn btn-success">{{data.contact.form.send}}</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <button id="closeModal" class="btn-close"></button>
 
 </main>
 <script> const projectImages = {{ images.projects|tojson }} </script>
