--- a/application/static/styles/_success.scss
+++ b/application/static/styles/_success.scss
@@ -1,8 +1,8 @@
-@import "variables";
+@import "utilities";
 
 #success
 {
-    background-color: $main-background ;
+    background-color: $home-background ;
     height: 100vh; 
     padding-top: 40px;
 }
